<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:targetApi="16">

<LinearLayout
    android:id="@+id/quiz_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        android:src="@drawable/meteorology" />

    <!--Question 1-->
    <TextView
        android:id="@+id/questionOne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:textSize="18sp"
        android:text="@string/question1" />

    <RadioGroup
        android:id="@+id/groupOne"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/radiogroup_vertical_margin"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/q1rb1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:textSize="16sp"
            android:text="@string/q1rb1" />

        <RadioButton
            android:id="@+id/q1rb2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:textSize="16sp"
            android:text="@string/q1rb2" />

        <RadioButton
            android:id="@+id/q1rb3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:textSize="16sp"
            android:text="@string/q1rb3" />

        <RadioButton
            android:id="@+id/q1rb4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:textSize="16sp"
            android:text="@string/q1rb4" />

    </RadioGroup>


    <!--Question 2-->
    <TextView
        android:id="@+id/questionTwo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:textSize="18sp"
        android:text="@string/question2" />

    <RadioGroup
        android:id="@+id/groupTwo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/radiogroup_vertical_margin"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/q2rb1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:textSize="16sp"
            android:text="@string/q2rb1" />

        <RadioButton
            android:id="@+id/q2rb2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:textSize="16sp"
            android:text="@string/q2rb2" />

        <RadioButton
            android:id="@+id/q2rb3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:textSize="16sp"
            android:text="@string/q2rb3" />

        <RadioButton
            android:id="@+id/q2rb4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:textSize="16sp"
            android:text="@string/q2rb4" />

    </RadioGroup>


    <!--Question 3-->
    <TextView
        android:id="@+id/questionThree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:textSize="18sp"
        android:text="@string/question3" />

    <RadioGroup
        android:id="@+id/groupThree"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/radiogroup_vertical_margin"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/q3rb1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:textSize="16sp"
            android:text="@string/q3rb1" />

        <RadioButton
            android:id="@+id/q3rb2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:textSize="16sp"
            android:text="@string/q3rb2" />

        <RadioButton
            android:id="@+id/q3rb3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:textSize="16sp"
            android:text="@string/q3rb3" />

        <RadioButton
            android:id="@+id/q3rb4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:textSize="16sp"
            android:text="@string/q3rb4" />

    </RadioGroup>


    <!--Question 4-->
    <TextView
        android:id="@+id/questionFour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:textSize="18sp"
        android:text="@string/question4" />

    <RadioGroup
        android:id="@+id/groupFour"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/radiogroup_vertical_margin"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/q4rb1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:textSize="16sp"
            android:text="@string/q4rb1" />

        <RadioButton
            android:id="@+id/q4rb2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:textSize="16sp"
            android:text="@string/q4rb2" />

        <RadioButton
            android:id="@+id/q4rb3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:textSize="16sp"
            android:text="@string/q4rb3" />

        <RadioButton
            android:id="@+id/q4rb4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:textSize="16sp"
            android:text="@string/q4rb4" />

    </RadioGroup>


    <!--Question 5-->
    <TextView
        android:id="@+id/questionFive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:textSize="18sp"
        android:text="@string/question5" />

    <CheckBox
        android:id="@+id/q5cb1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/q5cb1" />

    <CheckBox
        android:id="@+id/q5cb2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/q5cb2" />

    <CheckBox
        android:id="@+id/q5cb3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/q5cb3" />

    <CheckBox
        android:id="@+id/q5cb4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/q5cb4" />


    <!--Question 6-->
    <TextView
        android:id="@+id/question6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:textSize="18sp"
        android:text="@string/question6" />

    <EditText
        android:id="@+id/answer6"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_text"
        android:inputType="text"
        android:textSize="16sp" />


    <!--just to give a gap-->
    <View
        android:layout_width="match_parent"
        android:layout_height="24dp"
        android:layout_marginTop="16dp" />

    <!--Submit and Reset buttons-->
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/resetButtton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:onClick="resetQuiz"
            android:text="@string/resetButton"
            android:textSize="16sp" />

        <Button
            android:id="@+id/submitButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/resetButtton"
            android:layout_alignBottom="@+id/resetButtton"
            android:layout_alignParentStart="true"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:onClick="scoreQuiz"
            android:text="@string/submitButton"
            android:textSize="16sp" />
    </RelativeLayout>


</LinearLayout>
</ScrollView>
